# SquareCubed--Deprecated-

./: CMakeLists.txt  License.txt  ReadMe.md
Client/: CMakeLists.txt
Client/Client/: CMakeLists.txt  Main.cpp
Client/ClientBase/: AgentSelect.cpp  AgentSelect.h  Agents.cpp  Agents.h  BaseAgentTypes.cpp  BaseAgentTypes.h  BaseUnitTypes.cpp  BaseUnitTypes.h  CMakeLists.txt  Content.cpp  Content.h  DebugMenu.cpp  DebugMenu.h  Engine.cpp  Engine.h  FPSTimer.cpp  FPSTimer.h  IAgentRenderer.h  IAgentsCallback.h  ICamera.h  IContext.h  IDebugDispatcher.h  IElement.h  IElementFactory.h  IGUI.h  IGUIBindings.h  IGraphics.h  IGraphicsFactory.h  ILabel.h  IMainMenuCallback.h  INetwork.h  INetworkFactory.h  IPanel.h  IPlayerCallback.h  IPlayerDispatcher.h  IProgressBar.h  ISelectionRenderer.h  IState.h  ITexture2D.h  ITileRenderer.h  (+29 more)
Client/Modules/: CMakeLists.txt
Client/Modules/ClientRakNetNetwork/: AgentsPacketHandler.cpp  CMakeLists.txt  DebugDispatcher.cpp  DebugDispatcher.h  GameDispatcher.cpp  MainMenuPacketHandler.cpp  PlayerDispatcher.cpp  PlayerDispatcher.h  PlayerPacketHandler.cpp  RakNetNetwork.cpp  RakNetNetwork.h  RakNetNetworkFactory.cpp  RakNetNetworkFactory.h  RakNetNetworkLoader.h  UnitSelectDispatcher.cpp  UnitSelectDispatcher.h  UnitsPacketHandler.cpp  UnitsPacketHandler.h  WorldPacketHandler.cpp  WorldPacketHandler.h
Client/Modules/CoherentUIOpenGLGUI/: CMakeLists.txt  CoherentUI.h  CoherentUIOpenGLUI.cpp  CoherentUIOpenGLUI.h  CoherentUIOpenGLUILoader.h  Element.cpp  Element.h  ElementFactory.cpp  ElementFactory.h  GLheaders.h  GUIBindings.cpp  GUIBindings.h  HTMLElement.cpp  HTMLElement.h  Label.cpp  Label.h  LogHandler.cpp  LogHandler.h  Panel.cpp  Panel.h  ProgressBar.cpp  ProgressBar.h  Renderer.cpp  Renderer.h  SharedMemoryHelper.h  SharedMemoryHelperWin.cpp  SystemEventListener.cpp  SystemEventListener.h  Types.h  View.cpp  View.h  ViewEventListener.cpp  ViewEventListener.h
Client/Modules/GLFWContext/: CMakeLists.txt  GLFWContext.cpp  GLFWContext.h  GLFWWindow.cpp  GLFWWindow.h
Client/Modules/OpenGLGraphics/: AgentRenderer.cpp  AgentRenderer.h  CMakeLists.txt  GLheaders.h  OpenGLCamera.h  OpenGLGraphics.cpp  OpenGLGraphics.h  OpenGLGraphicsFactory.cpp  OpenGLGraphicsFactory.h  OpenGLGraphicsLoader.h  SelectionRenderer.cpp  SelectionRenderer.h  Texture2D.cpp  Texture2D.h  TileArray.cpp  TileArray.h  TileRenderer.cpp  TileRenderer.h  UnitRenderer.cpp  UnitRenderer.h
Client/States/: CMakeLists.txt
Client/States/GameState/: CMakeLists.txt  GameState.cpp  GameState.h  GameStateSwitcher.h
Client/States/MainMenuState/: CMakeLists.txt  MainMenuState.cpp  MainMenuState.h  MainMenuStateSwitcher.h
Common/: CMakeLists.txt
Common/CRakNetNetwork/: CMakeLists.txt  DummyFile.cpp  PacketTypes.h
Common/CommonLib/: CMakeLists.txt  Events.h  Logger.h  LoggingManager.cpp  LoggingManager.h  PacketTypes.h  PhysicsPacketDataTypes.h  agenttypes.h  metadata.h  metadata.h.in  postypes.h  worldtypes.h
Common/Physics/: AABBBroadphase.cpp  AABBBroadphase.h  CMakeLists.txt  CircleCollider.cpp  CircleCollider.h  Collider.h  CollisionResolver.cpp  CollisionResolver.h  DataTypes.cpp  DataTypes.h  DynamicRigidBody.cpp  DynamicRigidBody.h  IBroadphase.h  ICollider.h  IRigidBody.cpp  IRigidBody.h  Physics.cpp  Physics.h  Types.h
Dependencies/: CMakeDependencyCoherentUI.txt  CMakeDependencyDevIL.txt  CMakeDependencyGLEW.txt  CMakeDependencyGLFW.txt  CMakeDependencyGLM.txt  CMakeDependencyRakNet.txt  CMakeLists.txt
GameRoot/: .gitignore
GameRoot/Content/Agents/: agents.scta
GameRoot/Content/GUI/Deprecated/CSS/: common.css
GameRoot/Content/GUI/Deprecated/CSS/squarecubed-theme/: jquery-ui-1.10.3.custom.css
GameRoot/Content/GUI/Deprecated/JS/: common.js
GameRoot/Content/GUI/Deprecated/Views/Game/: Game.css
GameRoot/Content/GUI/Deprecated/Views/Loading/: Loading.css  Loading.html
GameRoot/Content/GUI/Deprecated/Views/MainMenu/: MainMenu.css  MainMenu.html
GameRoot/Content/GUI/Views/Game/: Game.html
GameRoot/Content/GUI/Views/MainMenu/: MainMenu.js
GameRoot/Content/GUI/scripts/: bindings.js
GameRoot/Content/GUI/styling/: reset.css  style.css
GameRoot/Content/Items/: items.scta
GameRoot/Content/Tiles/: tiles.scta
GameRoot/Content/Units/: units.scta
GameRoot/ContentSrc/Tiles/: 002.txt
GameRoot/ContentSrc/Turrets/Ground Laser Turret/: TurretSrc.pyxel
Server/: CMakeLists.txt
Server/ServerRakNetNetwork/: AgentsDispatcher.cpp  AgentsDispatcher.h  CMakeLists.txt  DebugPacketHandler.cpp  DebugPacketHandler.h  IRakNetPacketHandler.h  PlayerDispatcher.cpp  PlayerDispatcher.h  PlayerPacketHandler.cpp  PlayerPacketHandler.h  RakNetClientID.cpp  RakNetClientID.h  RakNetNetwork.cpp  RakNetNetwork.h  RakNetNetworkFactory.cpp  RakNetNetworkFactory.h  RakNetNetworkLoader.h  UnitSelectPacketHandler.cpp  UnitSelectPacketHandler.h  UnitsDispatcher.cpp  UnitsDispatcher.h  WorldDispatcher.cpp  WorldDispatcher.h
Server/WorldServer/: CMakeLists.txt  Main.cpp
Server/WorldServerBase/: Agents.cpp  Agents.h  BaseAgentTypes.cpp  BaseAgentTypes.h  BaseUnitTypes.cpp  BaseUnitTypes.h  CMakeLists.txt  Debug.cpp  Debug.h  IAgent.cpp  IAgent.h  IAgentsDispatcher.h  IClientID.h  IDebugCallback.h  INetwork.h  INetworkFactory.h  IPacketHandler.h  IPlayerCallback.h  IPlayerDispatcher.h  ITask.h  IUnit.cpp  IUnit.h  IUnitSelectCallback.h  IUnitsDispatcher.h  IWorldDispatcher.h  Items.cpp  Items.h  MoveBehavior.cpp  MoveBehavior.h  MoveTask.cpp  MoveTask.h  Players.cpp  Players.h  StandAtTask.cpp  StandAtTask.h  Types.h  Unit.cpp  Unit.h  UnitSelect.cpp  UnitSelect.h  (+7 more)
